<resources>
    <string name="app_name">IBCompsciIA</string>
    <string name="horror">Horror</string>
    <string name="scifi">SciFi</string>
    <string name="action">Action</string>
    <string name="romance">Romance</string>
    <string name="all">All</string>
    <string name="comedy">Comedy</string>
    <string name="adventure">Adventure</string>
    <string name="drama">Drama</string>
    <string name="movie_ranker">Movie Ranker</string>
    <string name="title_activity_all">AllActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>