<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/movie_ranker"
        android:textSize="48sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="61dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/all"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="79dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/comedy"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="474dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/adventure"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="552dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/romance"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="316dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/horror"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="395dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/scifi"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="237dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/drama"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="632dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="341dp"
        android:layout_height="79dp"
        android:text="@string/action"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="158dp" />

</androidx.constraintlayout.widget.ConstraintLayout>